2009-10-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/openvassd.c: Add missing include.

2009-10-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/openvassd.c (restart_openvassd, main): Use new
	pidfile management.

	* openvassd/sighand.c (sighandler): Use new pidfile management.

	* openvassd/utils.c (create_pid_file, delete_pid_file): Removed.

	* openvassd/utils.h: Removed protos accordingly.

2009-10-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/comm.c: replace ntp.h by otp.h.

2009-10-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Removing remains of old ntp_caps.

	* openvassd/utils.c (plugins_set_ntp_caps): Removed.

	* openvassd/utils.h: Removed proto accordingly.

	* openvassd/openvassd.c (scanner_thread): Removed call to
	set global ntp_caps. Removed call of plugins_set_ntp_caps
	which initalized the plugins with the gobal ntp_caps.

	* openvassd/comm.c (comm_init): changed return value from
	ntp_caps to just int, specifiying the protocol version.

	* openvassd/comm.h: Adjusted proto accordingly.

	* openvassd/attack.c, openvassd/utils.c, openvassd/ntp_11.c:
	Removed unnecessary include of ntp.h. 

2009-10-19  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.0.beta5.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-10-19  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-scanner 3.0.0-beta4 release.

	* VERSION: Set to 3.0.0.beta4.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2009-10-14 Srinivas NL <nl.srinivas@gmail.com>

	* cnvts/synscan/synscan.c: Temporary fix to remove compilation
	warning. Will be fixed properly once pcap is modified to handle
	ipv6

2009-10-14  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvassd/openvassd.c, openvassd/attack.c: Corrected includes.
