@@ -691,9 +691,7 @@ plugin_init(struct arglist * desc)
 	plug_set_category(desc, ACT_SCANNER);
 	plug_set_family(desc, EN_FAMILY);
 
-	/* 	commented out dependency on proprietary plugin, once when
- 		we implement it, we can uncomment it */
-	/* plug_set_dep(desc, "ping_host.nasl"); */
+	plug_set_dep(desc, "ping_host.nasl");
 	return (0);
 }
 
