@@ -1,3 +1,9 @@
+2009-10-26  Michael Meyer <michael.meyer@intevation.de>
+
+	* cnvts/openvas_tcp_scanner/openvas_tcp_scanner.c,
+	cnvts/synscan/synscan.c:
+	Added dependency ping_host.nasl.
+
 2009-10-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* openvassd/openvassd.c: Add missing include.
